--- a/Barreljump.html
+++ b/Barreljump.html
@@ -7,7 +7,7 @@
     <div class="background">
     <title>Adam Naumovski</title>
     <div class="background">
-        <a href="AboutMe.html" class="styled-button">About me</a>
+        <a href="Aboutme.html" class="styled-button">About me</a>
         <a href="index.html" class="styled-button">Home</a>
         <a href="shoppingcart/store.html" class="styled-button">Shopping Cart</a>
     </div>
