--- a/shoppingcart/store.html
+++ b/shoppingcart/store.html
@@ -14,7 +14,7 @@
     <script src="src/assets/script.js" defer></script>
     <script src="src/assets/front.js" defer></script>
     <a href="../index.html" class="styled-button">Home</a>
-    <a href="../Aboutme.html" class="styled-button">About Me</a>
+    <a href="../aboutme.html" class="styled-button">About Me</a>
         <a href="../Barreljump.html" class="styled-button">Barrel Jump</a>
         <a href="../shoppingcart/store.html" class="styled-button">Shopping Cart</a>
 </head>
