--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="/aboutme.html" rel="About me">
     <div class="background">
     <title>Adam Naumovski</title>
     <div class="background">
-        <a href="aboutMe.html" class="styled-button">About me</a>
+        <a href="/aboutMe.html" class="styled-button">About me</a>
         <a href="Barreljump.html" class="styled-button">Barrel Jump</a>
         <a href="shoppingcart/store.html" class="styled-button">Shopping Cart</a>
     </div>
