--- a/Barreljump.html
+++ b/Barreljump.html
@@ -8,7 +8,7 @@
     <div class="background">
     <title>Adam Naumovski</title>
     <div class="background">
-        <a href="aboutMe.html" class="styled-button">About me</a>
+        <a href="aboutme.html" class="styled-button">About me</a>
         <a href="index.html" class="styled-button">Home</a>
         <a href="shoppingcart/store.html" class="styled-button">Shopping Cart</a>
     </div>
