--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 <body>
     <h1>Adam Naumovski's Portfolio</h1>
-    <img src="images/me.jpg" alt="Adam" class="center-image">
+    <img src="images/cert.png" alt="Adam" class="center-image">
     <br>
     <br>
     <br>
