--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </div>
 <body>
     <h1>Adam Naumovski's Portfolio</h1>
-    <img src="images/cert.png" alt="Adam" class="center-image">
+    <img src="images/cert.png" alt="cert" class="center-image">
+    <div class="box"></div>
     <br>
     <br>
     <br>
