--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <h1>Adam Naumovski's Portfolio</h1>
     <img src="images/cert.png" alt="cert" class="center-image">
+    <img src="images/cert.png" alt="cert" class="center-image">
     <div class="box"></div>
     <br>
     <br>
