--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h1>Adam Naumovski's Portfolio</h1>
     <img src="images/cert.png" alt="cert" class="center-image">
     <img src="images/adventure.png" alt="adventure" class="center-image">
+    <img src="images/shoppingcart.png" alt="shopping" class="center-image">
     <div class="box"></div>
     <br>
     <br>
