--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
 <body>
     <h1>Adam Naumovski's Portfolio</h1>
+    <h2>Some images of my projects ive done</h2>
     <img src="images/cert.png" alt="cert" class="center-image">
     <img src="images/adventure.png" alt="adventure" class="adventure">
     <img src="images/shoppingcart.png" alt="shopping" class="center-image">
