--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <img src="images/cert.png" alt="cert" class="center-image">
                     <h3>Adventure Game in Python</h3>
                     <img src="images/adventure.png" alt="adventure" class="adventure">
+                    <h3>Shopping Cart using html, CSS and java script</h3>
                     <img src="images/shoppingcart.png" alt="shopping" class="center-image">
                 <div class="box"></div>
             <br>
