--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <h3>Adventure Game in Python</h3>
                     <img src="images/adventure.png" alt="adventure" class="adventure">
                     <h3>Shopping Cart using html, CSS and java script</h3>
-                    <img src="images/shoppingcart.png" alt="shopping" class="center-image">
+                    <img src="images/shoppingcart.png" alt="shopping" class="shopping">
                 <div class="box"></div>
             <br>
         <br>
