--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     </div>
 <body>
     <h1>Adam Naumovski's Portfolio</h1>
-        <h2>Some images of my projects ive done</h2>
+        <h2>Some of my projects ive done!!!</h2>
             <h3>Certificate Of Completion - Intro to Programming(Nanodegree Program)</h3>
                 <img src="images/cert.png" alt="cert" class="center-image">
+                    <div class="line"></div>
                     <h3>Adventure Game in Python</h3>
                     <img src="images/adventure.png" alt="adventure" class="adventure">
+                    <div class="line"></div>
                     <h3>Shopping Cart using html, CSS and java script</h3>
                     <img src="images/shoppingcart.png" alt="shopping" class="shopping">
                 <div class="box"></div>
