--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,6 @@
     The projects i have made 
 </p>    
     <script src="your_game.js"></script>
-    <script src="main.js"></script>
+    <script src="addz.py"></script>
 </body>
 </html>
