--- a/aboutme.html
+++ b/aboutme.html
@@ -17,11 +17,11 @@
 <body>
 <p>Hey im Adam Naumovski, i have undertaken a intro to programming nanodegree.
     I have just started a Certificate IV in Information Technology(programming).
-    The projects i have made are:
-    • Adventure Game with Python
-    • Html with cards with Css
-    • Shopping Cart with html,css and java script
-    • Barrel jump with pygame
+    The projects i have made are:<br>
+    • Adventure Game with Python<br>
+    • Html with cards with Css<br>
+    • Shopping Cart with html,css and java script<br>
+    • Barrel jump with pygame<br>
     I am currently working on more projects
 </p>    
     <script src="your_game.js"></script>
