--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
     </div>
 <body>
 <p>Hey im Adam Naumovski, i have undertaken a intro to programming nanodegree.
-    I have just started a Certificate IV in Information Technology(programming).
+    I have just started a Certificate IV in Information Technology(programming).<br>
     The projects i have made are:<br>
     • Adventure Game with Python<br>
     • Html with cards with Css<br>
