--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Adam Naumovski's Portfolio</h1>
     <br>
         <br>
-        <h2>Some of my projects ive done!!!</h2>
+        <h2>Some of my projects i've done!!!</h2>
         <br>
             <br>
             <h3>Certificate Of Completion - Intro to Programming(Nanodegree Program)</h3>
