--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <nav class="navbar">
-            <a href="home" class="active">Home</a>
-            <a href="about">About</a>
-            <a href="skills">Skills</a>
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
             <a href="shopping cart">Shopping Cart</a>
-            <a href="contact">Contact</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -177,9 +177,20 @@
                 <span class="focus"></span>
             </div>
 
-            <div class="btn-box"></div>
+            <div class="btn-box btns">
+                <button type="submit" class="btn">Submit</button>
+            </div>
         </form>
     </section>
+    <!-- footer design -->
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by Adam Naumovski | All Rights Reserved.</p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#"><i class='bx bx-chevron-up-circle' ></i></a>
+        </div>
+    </footer>
     <!---custom js link-->
     <script src="script.js"></script>
 </body>
