--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
+            <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="shopping cart">Shopping Cart</a>
             <a href="#contact">Contact</a>
+
+            <span class="active-nav"></span>
         </nav>
     </header>
 
@@ -58,7 +61,7 @@
     <section class="about" id="about">
         <h2 class="heading">About <span>Me</span></h2>
         <div class="about-img">
-            <img src="images/me.jpg" alt="">
+            <img src="images/home.jpg" alt="">
             <span class="circle-spin"></span>
         </div>
         <div class="about-contect">
