--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="about" id="about">
         <h2 class="heading">About <span>Me</span></h2>
         <div class="about-img">
-            <img src="images/home.JPEG" alt="">
+            <img src="images/about.JPEG" alt="">
             <span class="circle-spin"></span>
         </div>
         <div class="about-contect">
