--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
 
-        <form action="#">
+        <form action="contact.php" method="post">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Full Name" required>
