--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <span class="circle-spin"></span>
             <span class="animate scroll" style="--i:2;"></span>
         </div>
-        <div class="about-contect">
+        <div class="about-content">
             <h3>Programming<span class="animate scroll" style="--i:3;"></span></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> 
                 Atque similique vero aut, suscipit ea eos minima ducimus 
