--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <h3>Programmer/Coder</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Doloremque doloribus odio dolorum est voluptatum optio! Repudiandae, 
-                a vero veritatis eaque dignissimos recusandae facilis, 
-                mollitia laudantium, maxime quae corporis reiciendis saepe.
+            <p>Hi i'm Adam, i am 34 years of age. I have made some changes in my life, <br>
+                i used to be a welder, but have had a passion for <br>Programming / Computers. <br>
+                I have successfully 
+
                 <span class="animate" style="--i:4;"></span>
             </p>
 
