--- a/Shoppingcart/store.html
+++ b/Shoppingcart/store.html
@@ -13,7 +13,23 @@
     <link href="src/assets/storestyles.css" rel="stylesheet">
     <script src="src/assets/script.js" defer></script>
     <script src="src/assets/front.js" defer></script>
-    <a href="../index.html" class="active">Home</a>
+    <script src="../script.js"></script>
+    <header class="header">
+        <a href="#" class="logo">Menu<span class="animate" style="--i:1;"></span></a>
+
+        <div class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></div>
+
+        <nav class="navbar">
+            <a href="../index.html" class="active">Home</a>
+            <a href="../index.html#about">About</a>
+            <a href="../index.html#education">Education</a>
+            <a href="../index.html#skills">Skills</a>
+            <a href="../index.html#contact">Contact</a>
+
+            <span class="active-nav"></span>
+            <span class="animate" style="--i:2;"></span>
+        </nav>
+    </header>
 </head>
 <body>
     <div class="cart-total"></div>
