--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
-        <form action="#">
+        <form onsubmit="sendEmail(); reset(); return false;">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Full Name" required>
@@ -203,7 +203,7 @@
             </div>
 
             <div class="btn-box btns">
-                <button type="submit" class="btn">Submit</button>
+                <button type="submit" class="btn">Send</button>
 
                 <span class="animate scroll" style="--i:9;"></span>
             </div>
@@ -224,5 +224,24 @@
     </footer>
     <!---custom js link-->
     <script src="script.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        function sendEmail(){
+            Email.send({
+                Host : "smtp-mail.outlook.com",
+                Username : "adam.naumovski89@live.com",
+                Password : "Zavier20",
+                To : 'adam.naumovski89@live.com',
+                From : document.getElementById("email").value,
+                Subject : "New Contact Form Enquiry",
+                Body : "Name: " + document.getElementById("name").value
+                    + "<br> Email: " + document.getElementById("email").value
+                    + "<br> Mobile Number: " + document.getElementById("Mobile Number").value
+                    + "<br> Your Message: " + document.getElementById("Message").value
+            }).then(
+              message => alert("Message Sent")
+            );
+        }
+    </script>
 </body>
 </html>
