--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <form action="https://formsubmit.co/adam.naumovski89@live.com" method="POST">
-            <input type="hidden" name="_next" href="/thankyou.html"></a>
+            <input type="hidden" name="_next" href="thankyou.html"></a>
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Full Name" required>
