--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
         <form action="https://formsubmit.co/adam.naumovski89@live.com" method="POST">
             <input type="hidden" name="_subject" value="New Mail Yayy!!">
-            <input type="hidden" name="_next" href="thankyou.html"></a>
+            <input type="hidden" name="_next" value="https://addz89.github.io/thanks.html">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" name="name" placeholder="Full Name" required>
@@ -198,7 +198,7 @@
             </div>
 
             <div class="textarea-field">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+                <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
                 <span class="focus"></span>
 
                 <span class="animate scroll" style="--i:7;"></span>
