--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
 
         <form action="https://formsubmit.co/adam.naumovski89@live.com" method="POST">
             <input type="hidden" name="_subject" value="New Mail Yayy!!">
-            <input type="hidden" name="_next" value="https://addz89.github.io/thanks.html">
+            <input type="hidden" name="_next" value="https://addz89.github.io/thankyou.html">
+            <input type="hidden" name="_captcha" value="false">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" name="name" placeholder="Full Name" required>
