update styles animate

--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
             </div>
             <p>Hi i'm Adam, i am 34 years of age. I have made some changes in my life, <br>
                 i used to be a welder, but have had a passion for <br>Programming / Computers. <br>
-                I have successfully 
+                I have successfully completed a NanoDegree at Udacity.<br>
+
 
                 <span class="animate" style="--i:4;"></span>
             </p>
 
             <div class="btn-box">
-                <a href="#" class="btn">Hire Me</a>
-                <a href="#" class="btn">Let's Talk</a>
+                <a href="#" class="btn"></a>
+                <a href="#contact" class="btn">Let's Talk</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
