--- a/index.html
+++ b/index.html
@@ -35,21 +35,18 @@
     <!-- home section design -->
     <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>Adam Naumovski</span><span class="animate" style="--i:2;"></span></h1>
+            <h1>Hey, I'm <span>Adam Naumovski</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>Programmer/Coder</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>Hi i'm Adam, i am 34 years of age. I have made some changes in my life, <br>
-                i used to be a welder, but have had a passion for <br>Programming / Computers. <br>
-                I have successfully completed a NanoDegree at Udacity.<br>
-
-
+            <p>Have a look around at the Programs / Websites i have created.<br>
+                Enjoy!! And let me know what you think!!
                 <span class="animate" style="--i:4;"></span>
             </p>
 
             <div class="btn-box">
-                <a href="#" class="btn"></a>
+                <a href="#" class="btn">Hire Me</a>
                 <a href="#contact" class="btn">Let's Talk</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
@@ -76,10 +73,9 @@
         </div>
         <div class="about-content">
             <h3>Programming<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> 
-                Atque similique vero aut, suscipit ea eos minima ducimus 
-                accusamus saepe, <br> maxime omnis provident sit iure sed culpa 
-                commodi itaque reiciendis nihil.
+            <p>Hey i'm Adam, i am 34 years of age. I have made some changes in my life, <br>
+                i used to be a welder, but have had a passion for <br>Programming / Computers. <br>
+                I have successfully completed a NanoDegree at Udacity.
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
