update about me

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="Shoppingcart/store.html">Shopping Cart</a>
+            <a href="tradingcards/card.html">Trading Cards</a>
             <a href="#contact">Contact</a>
 
             <span class="active-nav"></span>
@@ -72,10 +73,11 @@
             <span class="animate scroll" style="--i:2;"></span>
         </div>
         <div class="about-content">
-            <h3>Programming<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Hey i'm Adam, i am 34 years of age. I have made some changes in my life, <br>
-                i used to be a welder, but have had a passion for <br>Programming / Computers. <br>
-                I have successfully completed a NanoDegree at Udacity.
+            <h3>About Me<span class="animate scroll" style="--i:3;"></span></h3>
+            <p>Hey i'm Adam, i am 34 years of age. I have made some changes in my life, 
+                I used to be a welder, But have had a passion for Programming / Coding. 
+                With long days and nights problem solving i have successfully developed games and also done
+                some web development. 
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
@@ -97,8 +99,18 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2023 - 2024</div>
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2023</div>
                             <h3>NanoDegree (Intro to Programming) - Udacity</h3>
+                            <p>~ Animal Trading Cards - HTML And Css.<br>
+                                ~ Text-Based Adventure Game - Python <br>
+                                ~ Text-Based Rock Paper Scissors Game - Python <br>
+                                ~ ECommerce Shopping Cart - HTML, Css And JavaScript</p>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2023</div>
+                            <h3>Self Tourt</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                 Minima, doloribus! Vel delectus voluptatum nisi. 
                                 Dolor architecto deserunt laudantium quaerat 
@@ -108,15 +120,13 @@
                     </div>
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i> 2024 - 2025</div>
+                            <div class="year"><i class='bx bxs-calendar' ></i> 2023 - 2024</div>
                             <h3>Certificate IV Information Technology - Upskilled</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Minima, doloribus! Vel delectus voluptatum nisi. 
-                                Dolor architecto deserunt laudantium quaerat 
-                                incidunt porro perspiciatis sequi asperiores! 
-                                Excepturi sunt iusto ad perferendis. Architecto.</p>
+                            <p>~ Animal Trading Cards - HTML And Css.<br>
+                                ~ Text-Based Adventure Game - Python <br>
+                                ~ Text-Based Rock Paper Scissors Game - Python <br>
+                                ~ ECommerce Shopping Cart - HTML, Css And JavaScript</p>
                         </div>
-                    </div>
 
                     <span class="animate scroll" style="--i:3;"></span>
                 </div>
