--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2023</div>
-                            <h3>Self Tourt</h3>
+                            <h3>Self </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                 Minima, doloribus! Vel delectus voluptatum nisi. 
                                 Dolor architecto deserunt laudantium quaerat 
