update animate and footer

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                                 ~ Text-Based Rock Paper Scissors Game - Python <br>
                                 ~ ECommerce Shopping Cart - HTML, Css And JavaScript</p>
                         </div>
+                        <span class="animate scroll" style="--i:3;"></span>
                     </div>
                     <div class="education-content">
                         <div class="content">
@@ -116,6 +117,7 @@
                                 incidunt porro perspiciatis sequi asperiores! 
                                 Excepturi sunt iusto ad perferendis. Architecto.</p>
                         </div>
+                        <span class="animate scroll" style="--i:3;"></span>
                     </div>
                     <div class="education-content">
                         <div class="content">
@@ -144,22 +146,22 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>HTML <span>60%</span></h3>
+                            <h3>HTML <span>55%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>CSS <span>50%</span></h3>
+                            <h3>CSS <span>45%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>JavaScript <span>25%</span></h3>
+                            <h3>JavaScript <span>5%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Python <span>75%</span></h3>
+                            <h3>Python <span>45%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
@@ -218,7 +220,9 @@
             </div>
         </form>
     </section>
+    
     <!-- footer design -->
+
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by Adam Naumovski | All Rights Reserved.</p>
