--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2023</div>
-                            <h3>Self tought</h3>
+                            <h3>Self taught</h3>
                             <p>~ Barrel Jump - Python Pygame <br>
                                 ~ Remake of the game DOOM - Python Pygame
                             </p>
