update cards on phone screen

--- a/tradingcards/card.html
+++ b/tradingcards/card.html
@@ -3,7 +3,7 @@
 <head>
   <!-- header design -->
   <header class="header">
-    <a href="#" class="logo">Trading Animal Cards<span class="animate" style="--i:1;"></span></a>
+    <a href="#" class="logo">Animal Trading Cards<span class="animate" style="--i:1;"></span></a>
 
     <div class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></div>
 
@@ -19,8 +19,8 @@
   <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class=wrap>
-    <div class=wolf>
+    <div class="wrap">
+    <div class="wolf">
       <h1>Gray Wolf</h1>
       <br>
       <br>
@@ -48,33 +48,35 @@
   <br>
   <br>
   <br>
-  
-  <div class=columns>
+  <br>
+  <div class="columns">
     <p class="intro">The bald eagle has been the national symbol of the United States since June 20, 1782. Their feet, which are also yellow, are equipped with sharp black talons. Eagles can fly up to 30 m.p.h.</p>
     <p><span><br><br>Scientific Name:</span> <br>Haliaeetus leucocephalus</p>
     <p><span><br>Habitat:</span> Lakes and reservoirs</p>
     <p><span><br>Diet:</span> Fish</p>
     <p><span><br>Average Length:</span> 28 to 40 inches</p>
-    <p class="about"><br>Bald eagles are large, predatory raptors that are recognizable for their brown body and wings, white head and tail, and hooked yellow beak.</p>
+    <p class="about"><br><br>Bald eagles are large, predatory raptors that are recognizable for their brown body and wings, white head and tail, and hooked yellow beak.</p>
   </div>
 </div>
 
-<div class=Tiger>
+<div class="Tiger">
   <h3>Tiger</h3>
   <br>
   <img src="tiger.jpg" alt="photo of tiger">
-  <div class=container>
     <br>
     <br>
-  <div class=columns>
-    <p class="intro">Tigers are powerful hunters with sharp teeth, strong jaws and agile bodies. They are the largest terrestrial mammal whose diet consists entirely of meat. Tigers can jump up to 32 feet</p>
-    <p><span><br>Scientific Name:</span> Panthera tigris</p>
-    <p><span><br>Habitat:</span> Forests and Grasslands </p>
-    <p><span><br>Diet:</span> Moose, Horses, Buffalos and Goats.</p>
-    <p><span><br>Average Length:</span> 189-300 cm </p>
-    <p class="about"><br>The tiger was first scientifically described in 1758. It once ranged widely from the Eastern Anatolia Region in the west to the Amur River basin in the east.</p>
+    <div class="container">
+      <br>
+      <br>
+    <div class="columns">
+      <p class="intro">Tigers are powerful hunters with sharp teeth, strong jaws and agile bodies. They are the largest terrestrial mammal whose diet consists entirely of meat. Tigers can jump up to 32 feet</p>
+      <p><span><br>Scientific Name:</span> <br>Panthera tigris</p>
+      <p><span><br>Habitat:</span> Forests and Grasslands </p>
+      <p><span><br>Diet:</span> Moose, Horses, Buffalos and Goats.</p>
+      <p><span><br>Average Length:</span> 189-300 cm </p>
+      <p class="about"><br>The tiger was first scientifically described in 1758. It once ranged widely from the Eastern Anatolia Region in the west to the Amur River basin in the east.</p>
+    </div>
   </div>
-</div>
-</div> 
-</body>
-</html>
+  </div> 
+  </body>
+  </html>
