--- a/tradingcards/card.html
+++ b/tradingcards/card.html
@@ -23,7 +23,7 @@
     <div class="wolf">
       <h1>Gray Wolf</h1>
       <br>
-      <br>
+      <br><br>
       <img src="Eurasian_wolf_2.jpg" alt="photo of wolf">
       <br>
       <br>
@@ -32,7 +32,7 @@
       
         <p class="intro"> The wolf has very dense and fluffy winter fur, with a short undercoat and long, coarse guard hairs.Most of the undercoat and some guard hairs are shed in spring and grow back in autumn.<br></p>
        
-          <p><span><br>Scientific Name:</span> Canis lupus<br></p>
+        <p><span><br>Scientific Name:</span> Canis lupus<br></p>
         <p><span><br>Habitat:</span> Forests and Grasslands</p>
         <p><span><br>Diet:</span> Large Hoofed Mammals</p>
         <p><span><br>Average Length:</span> 105–160 cm</p>
@@ -55,7 +55,7 @@
     <p><span><br>Habitat:</span> Lakes and reservoirs</p>
     <p><span><br>Diet:</span> Fish</p>
     <p><span><br>Average Length:</span> 28 to 40 inches</p>
-    <p class="about"><br><br>Bald eagles are large, predatory raptors that are recognizable for their brown body and wings, white head and tail, and hooked yellow beak.</p>
+    <p class="about"><br>Bald eagles are large, predatory raptors that are recognizable for their brown body and wings, white head and tail, and hooked yellow beak.</p>
   </div>
 </div>
 
