--- a/tradingcards/card.html
+++ b/tradingcards/card.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <!-- header design -->
   <header class="header">
     <a href="#" class="logo">Animal Trading Cards<span class="animate" style="--i:1;"></span></a>
 
-    <div class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></div>
 
     <nav class="navbar">
-        <a href="../index.html" class="active">Home</a>
+        <a href="../index.html" class="active"></a>
+
+        <div class="home-sci">
+          <a href="../index.html"><i class='bx bxs-home'></i></a>
+          <span class="animate" style="--i:6;"></span>
+      </div>
 
         <span class="active-nav"></span>
         <span class="animate" style="--i:2;"></span>
