--- a/tradingcards/card.html
+++ b/tradingcards/card.html
@@ -4,10 +4,11 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <!-- header design -->
   <header class="header">
-    <a href="#" class="logo">Animal Trading Cards<span class="animate" style="--i:1;"></span></a>
+    
     <nav class="navbar">
                 <div class="home-sci">
-          <a href="../index.html"><i class='bx bxs-home'></i></a>
+                  <h6>Animal Trading Cards</h6>
+          <a href="../index.html"><i class='bx bxs-home'></i>Home</a>
           <span class="animate" style="--i:6;"></span>
       </div>
 
