swordline and screen fix

--- a/tradingcards/card.html
+++ b/tradingcards/card.html
@@ -3,23 +3,23 @@
 <head>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <!-- header design -->
-  <header class="header">
+
     
-    <nav class="navbar">
+    <div class="navbar">
                 <div class="home-sci">
                   <h6>Animal Trading Cards</h6>
           <a href="../index.html"><i class='bx bxs-home'></i>Home</a>
           <span class="animate" style="--i:6;"></span>
       </div>
 
-        <span class="active-nav"></span>
         <span class="animate" style="--i:2;"></span>
-    </nav>
-</header>
+    </div>
+
   <meta charset="UTF-8">
   <title>Animal Trading Cards</title>
   <link rel="stylesheet" href="styles.css">
   <a href="../index.html" class="active"></a>
+  <div class="swordline"></div>
   </head>
   <body>
     <div class="wrap">
