--- a/tradingcards/card.html
+++ b/tradingcards/card.html
@@ -8,7 +8,7 @@
     <div class="navbar">
                 <div class="home-sci">
                   <h6>Animal Trading Cards</h6>
-          <a href="../index.html"><i class='bx bxs-home'></i>Home</a>
+          <a href="../index.html">Home</a>
           <span class="animate" style="--i:6;"></span>
       </div>
 
@@ -18,7 +18,6 @@
   <meta charset="UTF-8">
   <title>Animal Trading Cards</title>
   <link rel="stylesheet" href="styles.css">
-  <a href="../index.html" class="active"></a>
   <div class="swordline"></div>
   </head>
   <body>
