--- a/tradingcards/card.html
+++ b/tradingcards/card.html
@@ -79,4 +79,11 @@
   </div>
   </div> 
   </body>
+
+  <footer class="footer">
+    <div class="footer-text">
+        <p>Copyright &copy; 2023 by Adam Naumovski | All Rights Reserved.</p>
+
+        <span class="animate scroll" style="--i:1;"></span>
+    </div>
   </html>
