--- a/Shoppingcart/store.html
+++ b/Shoppingcart/store.html
@@ -38,10 +38,7 @@
         <div class="currency-selector"></div>
         <div class="headerBG">
             <div class="topScroll">
-                <div class="welcome">
-                    <p>Welcome to...</p>
-                </div>
-                <img src="src/images/pcshop.png" alt="pcshop">
+                <img class="pcshop" src="src/images/pcshop.png" alt="pcshop">
             </div>
         </div>
         <div class="swordline">   </div>
