--- a/Shoppingcart/store.html
+++ b/Shoppingcart/store.html
@@ -44,7 +44,7 @@
         <div class="swordline">   </div>
         <div class="cart-container">
             <div class="products-container">
-                <img src="src/images/gamingpcsale.png" alt="sale">
+                <img class="gaming" src="src/images/gamingpcsale.png" alt="sale">
                 <div class="Container snaps-inline"></div>
                 <div class="swordline"></div>
                 <img src="src/images/parts.png" alt="parts">
