--- a/Shoppingcart/store.html
+++ b/Shoppingcart/store.html
@@ -45,7 +45,7 @@
         <div class="cart-container">
             <div class="products-container">
                 <img class="gaming" src="src/images/gamingpcsale.png" alt="sale">
-                <h5>Scroll to see more</h5>
+                <h5>Swipe to see more</h5>
                 <div class="Container snaps-inline"></div>
                 <div class="swordline"></div>
                 <img src="src/images/parts.png" alt="parts">
