Barrel jump on site

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <a href="#about">About</a>
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
+            <a href="Barreljump.html">Barrel Jump</a>
             <a href="Shoppingcart/store.html">Shopping Cart</a>
             <a href="tradingcards/card.html">Trading Cards</a>
             <a href="#contact">Contact</a>
