--- a/Python_games.html
+++ b/Python_games.html
@@ -13,7 +13,7 @@
     
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Adam.<span class="animate" style="--i:1;"></span></a>
+        <a href="#" class="logo">Adam.Naumovski<span class="animate" style="--i:1;"></span></a>
 
         <div class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></div>
 
@@ -28,9 +28,18 @@
 <body>
     <h1 class = "barrel">Barrel Jump</h1>
     <p class = "game">Please Press Run <i class='bx bxs-chevron-down'></i></p>
-    <iframe src="https://trinket.io/embed/pygame/8fc22046ec?outputOnly=true" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+    <iframe src="https://trinket.io/embed/pygame/8fc22046ec?outputOnly=true" width="80%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+    <div class="swordline"></div>
+    <h1 class="adventure_title">Adventure Game</h1>
+    <p class = "game">Please Press Run <i class='bx bxs-chevron-down'></i></p>
+    <iframe class="adventure" src="https://trinket.io/embed/python3/02068ab4d9?outputOnly=true&runOption=run" width="80%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+    <div class="swordline"></div>
+    <h1 class="RPS">Rock, Paper, Scissors</h1>
+    <p class = "game">Please Press Run <i class='bx bxs-chevron-down'></i></p>
+    <iframe class="RPS_screen" src="https://trinket.io/embed/python3/94cb7de4fc?outputOnly=true&runOption=run" width="80%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     <!-- footer design -->
-    
+    <div class="swordline"></div>
+    <p class="about">These games have been made with Python, i have had alot of fun </p>
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by Adam Naumovski | All Rights Reserved.</p>
