--- a/Python_games.html
+++ b/Python_games.html
@@ -39,7 +39,9 @@
     <iframe class="RPS_screen" src="https://trinket.io/embed/python3/94cb7de4fc?outputOnly=true&runOption=run" width="80%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     <!-- footer design -->
     <div class="swordline"></div>
-    <p class="about">These games have been made with Python, i have had alot of fun </p>
+    <p class="about">These games have been made with Python, i have had alot of fun creating. There is alot more to come...
+        Thanks for playing..
+    </p>
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by Adam Naumovski | All Rights Reserved.</p>
