UPDATE !! new styles

--- a/Python_games.html
+++ b/Python_games.html
@@ -13,7 +13,7 @@
     
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Adam.Naumovski<span class="animate" style="--i:1;"></span></a>
+        <a href="#" class="logo"><img src="images/logo.png" alt=""><span class="animate" style="--i:1;"></span></a>
 
         <div class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></div>
 
@@ -26,11 +26,11 @@
     </header>
 </head>
 <body>
-    <h1 class = "barrel">Barrel Jump</h1>
+    <h1 class = "barrel"><i class='bx bx-bullseye bx-tada' style='color:#e04036'></i>  BARREL JUMP  <i class='bx bx-bullseye bx-tada' style='color:#e04036'  ></i></h1>
     <p class = "game">Please Press Run <i class='bx bxs-chevron-down'></i></p>
     <iframe src="https://trinket.io/embed/pygame/8fc22046ec?outputOnly=true" width="80%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     <div class="swordline"></div>
-    <h1 class="adventure_title">Adventure Game</h1>
+    <h1 class="adventure_title"><i class='bx bx-tv bx-tada' style='color:#0a0909' ></i>Adventure Game<i class='bx bx-tv bx-tada' style='color:#0a0909' ></i></h1>
     <p class = "game">Please Press Run <i class='bx bxs-chevron-down'></i></p>
     <iframe class="adventure" src="https://trinket.io/embed/python3/02068ab4d9?outputOnly=true&runOption=run" width="80%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     <div class="swordline"></div>
