--- a/tradingcards/card.html
+++ b/tradingcards/card.html
@@ -5,9 +5,10 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <!-- header design -->
 
-    
+  <a href="#" class="logos"><img src="../images/logo.png" alt=""><span class="animate" style="--i:1;"></span></a>
     <div class="navbar">
                 <div class="home-sci">
+                  
                   <h6>Animal Trading Cards</h6>
           <a href="../index.html"class="icon-with-space"><i class='bx bxs-home-alt-2'></i>Home</a>
           <span class="animate" style="--i:6;"></span>
