--- a/Shoppingcart/store.html
+++ b/Shoppingcart/store.html
@@ -15,8 +15,7 @@
     <script src="src/assets/front.js" defer></script>
     <script src="../script.js"></script>
     <header class="header">
-        <a href="#" class="logo"><span class="animate" style="--i:1;"></span></a>
-
+        <a href="#" class="logos"><img src="../images/logo.png" alt=""><span class="animate" style="--i:1;"></span></a>
         <div class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></div>
 
         <nav class="navbar">
