--- a/index.html
+++ b/index.html
@@ -122,10 +122,12 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2023 - 2024</div>
                             <h3>Certificate IV Information Technology - Upskilled</h3>
-                            <p>~ Animal Trading Cards - HTML And Css.<br>
-                                ~ Text-Based Adventure Game - Python <br>
-                                ~ Text-Based Rock Paper Scissors Game - Python <br>
-                                ~ ECommerce Shopping Cart - HTML,Css And JavaScript</p>
+                            <p> ~ Develop mobile applications.<br>
+                                ~ Build a user interface. <br>
+                                ~ Identify and resolve client ICT problems. <br>
+                                ~ Test software developments. <br>
+                                ~ Write scripts for software applications. <br>
+                            </p>
                         </div>
 
                     <span class="animate scroll" style="--i:3;"></span>
