--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i> 2023</div>
                             <h3>Self taught</h3>
-                            <p>~ Barrel Jump - Python Pygame <br>
-                                ~ Remake of the game DOOM - Python Pygame
+                            <p>~ Barrel Jump - Python Pygame 2D <br>
+                                ~ Learning Xcode for Apple, Have tried to remake the barrel jump game.<br>
+                                ~ I have also done some Unity 3D and Unreal engine games with abit of C# scripting.<br> 
+                                ~ I am enrolled with GameDev.tv the courses are Unity and Unreal. 
+                                
                             </p>
                         </div>
                         <span class="animate scroll" style="--i:3;"></span>
