--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="about-content">
             <h3>About Me<span class="animate scroll" style="--i:3;"></span></h3>
             <p>Hey i'm Adam, i am 34 years of age. I have made some changes in my life, 
-                I used to be a welder, But have had a passion for Programming / Coding. 
+                I had a passion for Programming / Coding. 
                 With long days and nights problem solving i have successfully developed games and also done
                 some web development. 
                 <span class="animate scroll" style="--i:4;"></span>
