--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
                             <h3>Python <span>45%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
+                        <div class="progress">
+                            <h3>Swift <span>65%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
                     </div>
 
                     <span class="animate scroll" style="--i:3;"></span>
