--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
-                            <h3>Swift <span>65%</span></h3>
+                            <h3>Swift (Xcode)<span>65%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
