--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="about" id="about">
         <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
         <div class="">
-            <img src="" alt="">
+            <img src="image/about.jpeg" alt="">
             <span class="circle-spin"></span>
             <span class="animate scroll" style="--i:2;"></span>
         </div>
