--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
     <!-- about section design -->
     <section class="about" id="about">
         <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
-        <div class="">
-            <img src="images/about.JPEG" alt="me">
+        <div class="about-img">
+            <img src="images/about.JPEG" alt="">
             <span class="circle-spin"></span>
             <span class="animate scroll" style="--i:2;"></span>
         </div>
         <div class="about-content">
             <h3>About Me<span class="animate scroll" style="--i:3;"></span></h3>
             <p>Hey i'm Adam, i am 34 years of age. I have made some changes in my life, 
-                I had a passion for Programming / Coding. 
+                I used to be a welder, But have had a passion for Programming / Coding. 
                 With long days and nights problem solving i have successfully developed games and also done
                 some web development. 
                 <span class="animate scroll" style="--i:4;"></span>
